# numerix-codex

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  langgraph.json  pyproject.toml  requirements.api.txt  requirements.txt  requirements.worker.txt
scripts/: seed_cached_videos.py
src/agent/: __init__.py  analyze_user_prompt.py  enhance_prompt.py  execute_code.py  generate_code.py  graph.py  graph_state.py  map_reduce.py  plan_video.py  regenerate_code.py  research_router.py  research_topic.py  source_registry.py
src/api/: language_registry.py  main.py
src/fe/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
src/manim-worker/: app.py
src/manim_docs/: Animation.py  Camera.py  mobject_frame.py  mobject_geometry_arc.py  mobject_geometry_boolean_ops.py  mobject_geometry_labelled.py  mobject_geometry_line.py  mobject_geometry_polygram.py  mobject_geometry_shape_matchers.py  mobject_geometry_tips.py  mobject_graph.py  mobject_graphing_coordinate_systems.py  mobject_graphing_functions.py  mobject_graphing_number_line.py  mobject_graphing_probability.py  mobject_graphing_scale.py  mobject_matrix.py  mobject_table.py  mobject_text.py  mobject_three_d_polyhedra.py  mobject_three_d_three_d_utils.py  mobject_three_d_three_dimensions.py  mobject_types_image_mobject.py  (+11 more)
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_language_registry.py  test_manim_worker.py  test_pipeline_integration.py  test_recovery_logic.py  test_retriever.py
(+37 files in other folders)
